--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
-<body>
+<body onload="getCategories()">
 <div class="container-fluid">
     <div class="row" id="title_row" style="min-width: 80%; margin-right: auto; margin-left: auto;
     padding-top: 20px; padding-bottom: 10px; max-width: 980px;">
@@ -71,10 +71,6 @@
             <div class="form-check" id="all-category-filters">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="all-category-radio"/>
                 <label class="form-check-label" for="all-category-radio" style="font-size: 0.800em;"> All </label>
-            </div>
-            <div class="form-check" id="automotive-category-filters">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="automotive-category-radio"/>
-                <label class="form-check-label" for="automotive-category-radio" style="font-size: 0.800em;"> Automotive </label>
             </div>
         </div>
         <div id="results_cards">
