--- a/index.html
+++ b/index.html
@@ -56,22 +56,36 @@
         <div class="form-inline" style="margin-bottom: 10px;">
             <button class="btn-sm btn-secondary" id="filter-button" data-bs-toggle="collapse"
                     data-bs-target="#search-filters" aria-expanded="false" aria-controls="collapseFilters">
-                <i class="fas fa-sliders-h"></i>
+                <i class="fas fa-filter"></i>
             </button>
             <label for="filter-button" style="margin-left: 20px;">Results</label>
         </div>
         <div class="collapse" id="search-filters" style="background-color: whitesmoke;">
-            <div class="input-group input-group-sm mb-3" style="margin-top: 10px;">
+            <div class="input-group input-group-sm mb-3" style="margin-top: 10px; margin-bottom: 10px;">
                 <div class="form-check form-switch">
                     <input class="form-check-input" type="checkbox" role="switch" id="inperson-switch" checked>
-                    <label class="form-check-label" for="inperson-switch" style="font-size: 0.800em;">In-Person Only</label>
+                    <label class="form-check-label" for="inperson-switch" style="font-size: 0.800em;">In-Person
+                        Only</label>
                 </div>
             </div>
-            <label class="form-label" style="margin-top: 10px; font-size: 0.875em;" id="categegoy-filters">Categories</label>
-            <div class="form-check" id="all-category-filters">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="all-category-radio"/>
-                <label class="form-check-label" for="all-category-radio" style="font-size: 0.800em;"> All </label>
+            <div id="categories_radio_buttons">
+                <label class="form-label" style="margin-top: 10px; font-size: 0.875em;" id="categegoy-filters">Categories</label>
+                <div class="form-check" id="all-category-filters">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="all-category-radio" checked/>
+                    <label class="form-check-label" for="all-category-radio" style="font-size: 0.800em;"> All </label>
+                </div>
             </div>
+            <table style="width: 100%;">
+                <tr>
+                    <td style="float: right;">
+                        <button class="btn-sm btn-secondary" id="apply-filter-button" data-bs-toggle="collapse"
+                                data-bs-target="#search-filters" aria-expanded="false" aria-controls="collapseFilters"
+                                style="margin-bottom: 5px;" onclick="getOffersWithCategories()">
+                            <i class="far fa-arrow-alt-circle-right"></i>
+                        </button>
+                    </td>
+                </tr>
+            </table>
         </div>
         <div id="results_cards">
             <!-- Here come the result cards -->
@@ -88,7 +102,9 @@
                 <div class="modal-body" id="detailsModalBody">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="eraseModal()">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="eraseModal()">
+                        Close
+                    </button>
                 </div>
             </div>
         </div>
