--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel" style="font-size: 0.900em;">Offer Details</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                            onclick="eraseModal()"></button>
                 </div>
                 <div class="modal-body" id="detailsModalBody">
                 </div>
