--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-secondary">My Likes</button></div>
                 <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-secondary">My Dislikes</button></div>
                 <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-secondary">My Recommendations</button></div>
-                <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-danger">Reset Preferences</button></div>
+                <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-danger" onclick="resetUserPreferences()">Reset Preferences</button></div>
                 <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-danger">Calculate Recommendations</button></div>
             </div>
         </div>
