--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
         </div>
         <div class="collapse" id="triplemenu" style="background-color: whitesmoke;">
             <div style="margin-top: 10px; margin-bottom: 10px;">
-                <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-secondary">My Likes</button></div>
-                <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-secondary">My Dislikes</button></div>
-                <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-secondary">My Recommendations</button></div>
-                <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-danger" onclick="resetUserPreferences()">Reset Preferences</button></div>
-                <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-danger">Calculate Recommendations</button></div>
+                <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-secondary btn-sm" onclick="getUserOffersPreferences()">My Offers Preferences</button></div>
+                <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-danger btn-sm" onclick="resetUserPreferences()">Reset My Offers Preferences</button></div>
+                <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-danger btn-sm" onclick="calculateUserRecommendations()">Update My Offers Recommendations</button></div>
             </div>
         </div>
     </div>
