currently hiding the user offers preferences button while investigating display options

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="collapse" id="triplemenu" style="background-color: whitesmoke;">
             <div style="margin-top: 10px; margin-bottom: 10px;">
-                <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-secondary btn-sm" onclick="getUserOffersPreferences()">My Offers Preferences</button></div>
+                <!--<div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-secondary btn-sm" onclick="getUserOffersPreferences()">My Offers Preferences</button></div>-->
                 <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-warning btn-sm" onclick="calculateUserRecommendations()">Update My Offers Recommendations</button></div>
                 <div style="margin-top: 5px; margin-bottom: 5px;"><button type="button" class="btn btn-danger btn-sm" onclick="resetUserPreferences()">Reset My Offers Preferences</button></div>
             </div>
