added support for loading more offers

--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
         <div id="results_cards">
             <!-- Here come the result cards -->
         </div>
+        <div>
+            <table style="width: 100%;">
+                <tr style="text-align: center;">
+                    <td id="more-offer-cell">
+                        <button type="button" class="btn btn-info btn-sm" style="margin-top: 10px;" id="more-offers-button" onclick="getMoreOffers()">More Offers</button>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
     <!-- Offer Details Modal -->
     <div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true">
